--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -1,22 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.raviblog.tech/data/v2/css/rb-fonts.css">
+    <link rel="stylesheet" href="{% static "public/css/base.css" %}">
+    <link rel="stylesheet" href="{% static "public/css/style.css" %}">
     <title>{{title}}</title>
 </head>
 
-<body>
-    <main class="container">
-        {% block content %}
+<body class="overflow-x-hidden">
+    {% block content %}
 
-        {% endblock %}
-    </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    {% endblock %}
+    <script src="{% static "public/js/base.js" %}"></script>
 </body>
 
 </html>
