--- a/Home/static/public/css/style.css
+++ b/Home/static/public/css/style.css
@@ -40,3 +40,41 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+.main-scrollbar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.main-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #4e4e4e63;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    transition: all 0.3s ease;
+}
+
+.main-scrollbar::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+}
+
+.main-scrollbar::-webkit-scrollbar-track:hover {
+    background-color: #f4f4f4;
+}
+
+.main-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #4e4e4e;
+}
+
+.main-scrollbar {
+    overflow-y: auto;
+    max-height: 100%;
+}
+
+/* .auth-container .auth-form {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+} */
