--- a/Home/templates/settings/profile.html
+++ b/Home/templates/settings/profile.html
@@ -1,29 +1,84 @@
 {% extends 'dash-layout.html' %}
 
-{% block content %} 
+{% block content %}
 
-    <h2 class="text-2xl font-semibold mb-6">Profile</h2>
+<div class="flex items-center justify-between mb-8">
+  <h2 class="text-2xl karnak font-semibold">Profile</h2>
+  <a href=""
+    class="hover:shadow-form rounded-md bg-blue-950 py-2 px-6 text-center text-base font-semibold text-white outline-none">
+    Edit Profile
+  </a>
+</div>
 
-    <div class="flex items-center mb-4">
-      {% if user.picture %}
-        <img src="{{ user.picture.url }}" alt="{{ user.username }}'s Profile Picture" class="rounded-full h-16 w-16 mr-4">
-      {% else %}
-        <div class="rounded-full h-16 w-16 bg-gray-300 mr-4"></div>
-      {% endif %}
-
-      <div>
-        <h3 class="text-lg font-semibold">{{ user.first_name }}</h3>
-        <p class="text-gray-600">{{ user.email }}</p>
-      </div>
+<div class="flex items-center justify-center p-12">
+  <div class="flex flex-col w-full max-w-md bg-slate-100 px-8 py-5 rounded-lg shadow-lg border border-gray-200">
+    <div class="flex mb-4 justify-center">
+      <img src="{{ user.picture.url }}" draggable="false" alt="profile" class="w-32 bg-slate-900 object-cover h-32 rounded-full" />
     </div>
+    {% comment %} <h2 class="text-2xl font-semibold text-center mt-4">{{ user.first_name }} {{ user.last_name }}</h2>
+    <p class="text-base font-medium text-center text-gray-500 mt-2">{{ user.email }}</p> {% endcomment %}
+    <div class="mx-auto mt-5 w-full max-w-[550px]">
+      <form action="" method="POST">
+        <div class="-mx-3 flex flex-wrap">
+          <div class="w-full px-3 sm:w-1/2">
+            <div class="mb-5">
+              <label for="fName" class="mb-3 block text-base cheltenham font-medium cheltenham text-slate-900">
+                First Name
+              </label>
+              <input readonly type="text" name="fName" id="fName" value="{{ user.first_name }}" placeholder="First Name"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+          </div>
+          <div class="w-full px-3 sm:w-1/2">
+            <div class="mb-5">
+              <label for="lName" class="mb-3 block text-base font-medium cheltenham text-slate-900">
+                Last Name
+              </label>
+              <input readonly type="text" value="{{ user.last_name }}" name="lName" id="lName" placeholder="Last Name"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+          </div>
+        </div>
 
-    <div class="mt-4">
-      <h4 class="text-lg font-semibold mb-2">Additional Information</h4>
-      <p class="text-gray-600">Joined on {{ user.date_joined|date:"F d, Y" }}</p>
-      {% if user.profile.bio %}
-        <p class="text-gray-600 mt-2">{{ user.profile.bio }}</p>
-      {% endif %}
+        <div class="mb-5">
+          <label for="email" class="mb-3 block text-base font-medium cheltenham text-slate-900">
+            Email
+          </label>
+          <input readonly type="email" name="email" value="{{user.email}}" id="email"
+            class="w-full appearance-none rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+        </div>
+
+        <div class="-mx-3 flex flex-wrap">
+          <div class="w-full px-3 sm:w-1/2">
+            <div class="mb-5">
+              <label for="date" class="mb-3 block text-base font-medium cheltenham text-slate-900">
+                Joined At
+              </label>
+              <input readonly type="datetime" value="{{ user.date_joined }}" name="date" id="date"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+          </div>
+          <div class="w-full px-3 sm:w-1/2">
+            <div class="mb-5">
+              <label for="time" class="mb-3 block text-base font-medium cheltenham text-slate-900">
+                Last Login
+              </label>
+              <input readonly type="datetime" value="{{user.last_login}}" name="time" id="time"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+          </div>
+        </div>
+
+        <div class="hidden">
+          <button
+            class="hover:shadow-form rounded-md bg-[#6A64F1] py-3 px-8 text-center text-base font-semibold text-white outline-none">
+            Submit
+          </button>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
 
 
 {% endblock %}
